change profile photo, fix scroll on mobile devices

--- a/portfolio/src/styles/input.css
+++ b/portfolio/src/styles/input.css
@@ -32,7 +32,7 @@ html, body, #root {
 body {
   @apply flex flex-col items-center w-full min-h-screen m-0  ;
   color: var(--secondary-color-text);
-  display:relative;
+  position:relative;
   overflow-x:hidden;
   font-family: 'Unna', serif;
   background-size: 400% 400%;
@@ -142,11 +142,13 @@ header a {
 }
 
 /*--------------------MAIN----------------------*/
-main{
+main {
   @apply xl:px-[15%] 
-  max-[523px]:fixed max-[523px]:top-[78px];
+         max-[523px]:px-3 /* zmniejszony padding na małych ekranach */
+         max-[523px]:relative 
+         max-[523px]:top-[78px] 
+         max-[523px]:w-full; /* upewnij się, że nie wychodzi poza ekran */
 }
-
 /*-------------------- HOME --------------------*/
 .home {
   @apply w-full flex flex-col md:flex-row justify-center min-h-[95vh] gap-5 p-3 text-shadow-white/50 shadow-white/90 mb-10 ;
